[backport] Add exportResource query param to WH api WRD query endpoint
